# cw-ibc-demo

contracts/callback-capturer/: Cargo.toml
contracts/callback-capturer/src/: contract.rs
contracts/simple-ica-controller/: Cargo.toml
contracts/simple-ica-controller/src/: contract.rs  ibc.rs
contracts/simple-ica-host/: Cargo.toml
contracts/simple-ica-host/src/: contract.rs
