[package]
name = "simple-ica-host"
version = "0.3.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2021"
publish = false
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker tests, cargo test --lib

[dependencies]
simple-ica = { version = "0.3.0", path = "../../packages/simple-ica" }
cosmwasm-std = { version = "2.0.0", features = ["iterator", "stargate"] }
cw-storage-plus = { version = "2.0.0" }
cw-utils = { version = "2.0.0" }
cw1-whitelist = { version = "2.0.0", features = ["library"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "2.0.0" }
